@@ -11,6 +11,8 @@ Current:
 
   * New programmers supported:
 
+      - BusPirate
+
   * Bugfixes
 
 Version 5.8:
